[workspace]
members = [
	"client/cli",
	"client/consensus/aura",
	"client/consensus/common",
	"client/consensus/relay-chain",
	"client/network",
	"client/pov-recovery",
	"client/service",
	"client/relay-chain-interface",
	"client/relay-chain-local",
	"pallets/aura-ext",
	"pallets/collator-selection",
	"pallets/dmp-queue",
	"pallets/allychain-system",
	"pallets/allychain-system/proc-macro",
	"pallets/session-benchmarking",
	"pallets/xcm",
	"pallets/xcmp-queue",
	"allychain-template/node",
	"allychain-template/runtime",
	"primitives/core",
	"primitives/allychain-inherent",
	"primitives/timestamp",
	"primitives/utility",
	"axia-allychains/",
	"axia-allychains/pallets/allychain-info",
	"axia-allychains/pallets/ping",
	"axia-allychains/betanet-allychain",
	"axia-allychains/shell",
	"axia-allychains/allychains-common",
	"axia-allychains/statemint",
	"axia-allychains/statemine",
	"axia-allychains/westmint",
	"axia-allychains/canvas-axctest",
	"test/client",
	"test/relay-sproof-builder",
	"test/relay-validation-worker-provider",
	"test/runtime",
	"test/service",
]

[profile.release]
panic = "unwind"
opt-level = 3

[profile.production]
inherits = "release"
lto = true
codegen-units = 1
