[package]
name = "axia-collator"
version = "5.2.0"
authors = ["Parity Technologies <admin@parity.io>"]
build = "build.rs"
edition = "2021"

[[bin]]
name = "axia-collator"
path = "src/main.rs"

[dependencies]
clap = { version = "3.1", features = ["derive"] }
futures = { version = "0.3.1", features = ["compat"] }
log = "0.4.8"
codec = { package = "parity-scale-codec", version = "2.3.0" }
serde = { version = "1.0.132", features = ["derive"] }
hex-literal = "0.3.4"
async-trait = "0.1.42"

# Allychain runtimes
rococo-allychain-runtime = { path = "rococo-allychain" }
shell-runtime = { path = "shell" }
seedling-runtime = { path = "seedling" }
statemint-runtime = { path = "statemint" }
statemine-runtime = { path = "statemine" }
westmint-runtime = { path = "westmint" }
canvas-kusama-runtime = { path = "canvas-kusama" }
allychains-common = { path = "allychains-common" }

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/axtend/axlib", branch = "axlib" }
frame-benchmarking-cli = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-runtime = { git = "https://github.com/axtend/axlib", default-features = false, branch = "axlib" }
sp-io = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-core = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-inherents = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-consensus = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-session = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-consensus = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-cli = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-client-api = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-executor = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-service = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-telemetry = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-transaction-pool = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-transaction-pool = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-network = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-basic-authorship = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-timestamp = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-blockchain = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-block-builder = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-keystore = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-chain-spec = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-rpc = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-tracing = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-offchain = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-api = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-consensus-aura = { git = "https://github.com/axtend/axlib", branch = "axlib" }
substrate-prometheus-endpoint = { git = "https://github.com/axtend/axlib", branch = "axlib" }

# try-runtime stuff.
try-runtime-cli = { git = "https://github.com/axtend/axlib", branch = "axlib" }

# RPC related dependencies
jsonrpc-core = "18.0.0"
sc-transaction-pool-api = { git = "https://github.com/axtend/axlib", branch = "axlib" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/axtend/axlib", branch = "axlib" }
pallet-transaction-payment-rpc = { git = "https://github.com/axtend/axlib", branch = "axlib" }
pallet-contracts-rpc = { git = "https://github.com/axtend/axlib", branch = "axlib" }

# Cumulus dependencies
cumulus-client-cli = { path = "../client/cli" }
cumulus-client-consensus-aura = { path = "../client/consensus/aura" }
cumulus-client-consensus-relay-chain = { path = "../client/consensus/relay-chain" }
cumulus-client-consensus-common = { path = "../client/consensus/common" }
cumulus-client-service = { path = "../client/service" }
cumulus-client-network = { path = "../client/network" }
cumulus-primitives-core = { path = "../primitives/core" }
cumulus-primitives-allychain-inherent = { path = "../primitives/allychain-inherent" }
cumulus-relay-chain-interface = { path = "../client/relay-chain-interface" }
cumulus-relay-chain-local = { path = "../client/relay-chain-local" }

# Axia dependencies
axia-primitives = { git = "https://github.com/axtend/axia", branch = "axia" }
axia-service = { git = "https://github.com/axtend/axia", branch = "axia" }
axia-cli = { git = "https://github.com/axtend/axia", branch = "axia" }
axia-allychain = { git = "https://github.com/axtend/axia", branch = "axia" }
xcm = { git = "https://github.com/axtend/axia", branch = "axia" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/axtend/axlib", branch = "axlib" }

[dev-dependencies]
assert_cmd = "2.0"
nix = "0.23"
tempfile = "3.2.0"

[features]
default = []
runtime-benchmarks = [
	"axia-service/runtime-benchmarks",
	"statemint-runtime/runtime-benchmarks",
	"statemine-runtime/runtime-benchmarks",
	"westmint-runtime/runtime-benchmarks",
]
try-runtime = [
	'statemint-runtime/try-runtime',
	'statemine-runtime/try-runtime',
	'westmint-runtime/try-runtime',
	'shell-runtime/try-runtime',
]
