[package]
name = "allychain-template-node"
version = "0.1.0"
authors = ["Anonymous"]
description = "A new Cumulus FRAME-based Substrate Node, ready for hacking together a allychain."
license = "Unlicense"
homepage = "https://substrate.io"
repository = "https://github.com/axiatech/cumulus/"
edition = "2021"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/axtend/axlib", branch = "axlib" }

[[bin]]
name = "allychain-collator"
path = "src/main.rs"

[features]
runtime-benchmarks = [
	"allychain-template-runtime/runtime-benchmarks",
	"axia-cli/runtime-benchmarks",
]
try-runtime = ["allychain-template-runtime/try-runtime"]

[dependencies]
clap = { version = "3.1", features = ["derive"] }
derive_more = "0.99.2"
log = "0.4.14"
codec = { package = "parity-scale-codec", version = "2.0.0" }
serde = { version = "1.0.132", features = ["derive"] }
hex-literal = "0.3.4"

# RPC related Dependencies
jsonrpc-core = "18.0.0"

# Local Dependencies
allychain-template-runtime = { path = "../runtime" }

# Substrate Dependencies
frame-benchmarking = { git = "https://github.com/axtend/axlib", branch = "axlib" }
frame-benchmarking-cli = { git = "https://github.com/axtend/axlib", branch = "axlib" }
try-runtime-cli = { git = "https://github.com/axtend/axlib", branch = "axlib" }

pallet-transaction-payment-rpc = { git = "https://github.com/axtend/axlib", branch = "axlib" }

substrate-frame-rpc-system = { git = "https://github.com/axtend/axlib", branch = "axlib" }
substrate-prometheus-endpoint = { git = "https://github.com/axtend/axlib", branch = "axlib" }

## Substrate Client Dependencies
sc-basic-authorship = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-chain-spec = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-cli = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-client-api = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-consensus = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-executor = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-network = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-keystore = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-rpc = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-rpc-api = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-service = { git = "https://github.com/axtend/axlib", features = ["wasmtime"], branch = "axlib" }
sc-telemetry = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-transaction-pool = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-transaction-pool-api = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-tracing = { git = "https://github.com/axtend/axlib", branch = "axlib" }

## Substrate Primitive Dependencies
sp-api = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-block-builder = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-blockchain = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-consensus = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-consensus-aura = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-core = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-inherents = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-keystore = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-offchain = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-runtime = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-session = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-timestamp = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-transaction-pool = { git = "https://github.com/axtend/axlib", branch = "axlib" }

# Cumulus dependencies
cumulus-client-cli = { path = "../../client/cli" }
cumulus-client-collator = { path = "../../client/collator" }
cumulus-client-consensus-aura = { path = "../../client/consensus/aura" }
cumulus-client-consensus-common = { path = "../../client/consensus/common" }
cumulus-client-network = { path = "../../client/network" }
cumulus-client-service = { path = "../../client/service" }
cumulus-primitives-core = { path = "../../primitives/core" }
cumulus-primitives-allychain-inherent = { path = "../../primitives/allychain-inherent" }
cumulus-relay-chain-interface = { path = "../../client/relay-chain-interface" }
cumulus-relay-chain-local = { path = "../../client/relay-chain-local" }

# Axia dependencies
axia-cli = { git = "https://github.com/axtend/axia", branch = "axia" }
axia-allychain = { git = "https://github.com/axtend/axia", branch = "axia" }
axia-primitives = { git = "https://github.com/axtend/axia", branch = "axia" }
axia-service = { git = "https://github.com/axtend/axia", branch = "axia" }
xcm = { git = "https://github.com/axtend/axia", default-features = false, branch = "axia" }
