[package]
name = "axia-collator"
version = "5.2.0"
authors = ["Axia Technologies <admin@axia.io>"]
build = "build.rs"
edition = "2021"

[[bin]]
name = "axia-collator"
path = "src/main.rs"

[dependencies]
clap = { version = "3.1", features = ["derive"] }
futures = { version = "0.3.1", features = ["compat"] }
log = "0.4.8"
codec = { package = "parity-scale-codec", version = "2.3.0" }
serde = { version = "1.0.132", features = ["derive"] }
hex-literal = "0.3.4"
async-trait = "0.1.42"

# Allychain runtimes
betanet-allychain-runtime = { path = "betanet-allychain" }
shell-runtime = { path = "shell" }
seedling-runtime = { path = "seedling" }
statemint-runtime = { path = "statemint" }
statemine-runtime = { path = "statemine" }
westmint-runtime = { path = "westmint" }
canvas-axctest-runtime = { path = "canvas-axctest" }
allychains-common = { path = "allychains-common" }

# Axlib dependencies
frame-benchmarking = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
frame-benchmarking-cli = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-runtime = { git = "https://github.com/axtend/axlib", default-features = false, branch = "c92f69d" }
sp-io = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-core = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-inherents = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-consensus = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-session = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-consensus = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-cli = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-client-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-executor = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-service = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-telemetry = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-transaction-pool = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-transaction-pool = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-network = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-basic-authorship = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-timestamp = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-blockchain = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-block-builder = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-keystore = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-chain-spec = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-rpc = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-tracing = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-offchain = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-consensus-aura = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
substrate-prometheus-endpoint = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

# try-runtime stuff.
try-runtime-cli = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

# RPC related dependencies
jsonrpc-core = "18.0.0"
sc-transaction-pool-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/axtend/axlib", branch = "c92f69d" }
pallet-transaction-payment-rpc = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
pallet-contracts-rpc = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

# Cumulus dependencies
cumulus-client-cli = { path = "../client/cli" }
cumulus-client-consensus-aura = { path = "../client/consensus/aura" }
cumulus-client-consensus-relay-chain = { path = "../client/consensus/relay-chain" }
cumulus-client-consensus-common = { path = "../client/consensus/common" }
cumulus-client-service = { path = "../client/service" }
cumulus-client-network = { path = "../client/network" }
cumulus-primitives-core = { path = "../primitives/core" }
cumulus-primitives-allychain-inherent = { path = "../primitives/allychain-inherent" }
cumulus-relay-chain-interface = { path = "../client/relay-chain-interface" }
cumulus-relay-chain-local = { path = "../client/relay-chain-local" }

# Axia dependencies
axia-primitives = { git = "https://github.com/axtend/axia", branch = "66cb46b" }
axia-service = { git = "https://github.com/axtend/axia", branch = "66cb46b" }
axia-cli = { git = "https://github.com/axtend/axia", branch = "66cb46b" }
axia-allychain = { git = "https://github.com/axtend/axia", branch = "66cb46b" }
xcm = { git = "https://github.com/axtend/axia", branch = "66cb46b" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

[dev-dependencies]
assert_cmd = "2.0"
nix = "0.23"
tempfile = "3.2.0"

[features]
default = []
runtime-benchmarks = [
	"axia-service/runtime-benchmarks",
	"statemint-runtime/runtime-benchmarks",
	"statemine-runtime/runtime-benchmarks",
	"westmint-runtime/runtime-benchmarks",
]
try-runtime = [
	'statemint-runtime/try-runtime',
	'statemine-runtime/try-runtime',
	'westmint-runtime/try-runtime',
	'shell-runtime/try-runtime',
]
