[package]
name = "statemint-runtime"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
description = "Statemint allychain runtime"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.3.0", default-features = false, features = ["derive", "max-encoded-len"] }
hex-literal = { version = "0.3.4", optional = true }
log = { version = "0.4.14", default-features = false }
allychain-info = { path = "../pallets/allychain-info", default-features = false }
serde = { version = "1.0.132", optional = true, features = ["derive"] }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
smallvec = "1.6.1"

# Substrate dependencies
sp-std = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-axia-v0.9.17" }
sp-api = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-axia-v0.9.17" }
sp-io = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-axia-v0.9.17" }
sp-version = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-axia-v0.9.17" }
sp-runtime = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-axia-v0.9.17" }
sp-core = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-axia-v0.9.17" }
sp-session = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-axia-v0.9.17" }
sp-offchain = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-axia-v0.9.17" }
sp-block-builder = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-axia-v0.9.17" }
sp-transaction-pool = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-axia-v0.9.17" }
sp-inherents = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-axia-v0.9.17" }
sp-consensus-aura = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-axia-v0.9.17" }

frame-benchmarking = { git = "https://github.com/purestake/substrate", optional = true, default-features = false, branch = "moonbeam-axia-v0.9.17" }
frame-system-benchmarking = { git = "https://github.com/purestake/substrate", optional = true, default-features = false, branch = "moonbeam-axia-v0.9.17" }
frame-support = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-axia-v0.9.17" }
frame-executive = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-axia-v0.9.17" }
frame-system = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-axia-v0.9.17" }
frame-system-rpc-runtime-api = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-axia-v0.9.17" }
pallet-asset-tx-payment = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17", default-features = false }
pallet-assets = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-axia-v0.9.17" }
pallet-aura = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-axia-v0.9.17" }
pallet-authorship = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-axia-v0.9.17" }
pallet-balances = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-axia-v0.9.17" }
pallet-multisig = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-axia-v0.9.17" }
pallet-proxy = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-axia-v0.9.17" }
pallet-session = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-axia-v0.9.17" }
pallet-sudo = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-axia-v0.9.17" }
pallet-timestamp = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-axia-v0.9.17" }
pallet-transaction-payment = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-axia-v0.9.17" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-axia-v0.9.17" }
pallet-uniques = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-axia-v0.9.17" }
pallet-utility = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-axia-v0.9.17" }

# Cumulus dependencies
cumulus-pallet-aura-ext = { path = "../../pallets/aura-ext", default-features = false }
cumulus-pallet-allychain-system = { path = "../../pallets/allychain-system", default-features = false }
cumulus-primitives-core = { path = "../../primitives/core", default-features = false }
cumulus-primitives-timestamp = { path = "../../primitives/timestamp", default-features = false }
cumulus-primitives-utility = { path = "../../primitives/utility", default-features = false }
cumulus-pallet-dmp-queue = { path = "../../pallets/dmp-queue", default-features = false }
cumulus-pallet-xcmp-queue = { path = "../../pallets/xcmp-queue", default-features = false }
cumulus-pallet-xcm = { path = "../../pallets/xcm", default-features = false }
cumulus-pallet-session-benchmarking = { path = "../../pallets/session-benchmarking", default-features = false, version = "3.0.0" }
cumulus-ping = { path = "../pallets/ping", default-features = false }
pallet-collator-selection = { path = "../../pallets/collator-selection", default-features = false }
allychains-common = { path = "../allychains-common", default-features = false }

# Axia dependencies
axia-allychain = { git = "https://github.com/purestake/axia", default-features = false, branch = "moonbeam-axia-v0.9.17" }
axia-runtime-common = { git = "https://github.com/purestake/axia", default-features = false, branch = "moonbeam-axia-v0.9.17" }
axia-runtime-constants = { git = "https://github.com/purestake/axia", default-features = false, branch = "moonbeam-axia-v0.9.17" }
axia-core-primitives = { git = "https://github.com/purestake/axia", default-features = false, branch = "moonbeam-axia-v0.9.17" }
xcm = { git = "https://github.com/purestake/axia", default-features = false, branch = "moonbeam-axia-v0.9.17" }
xcm-builder = { git = "https://github.com/purestake/axia", default-features = false, branch = "moonbeam-axia-v0.9.17" }
xcm-executor = { git = "https://github.com/purestake/axia", default-features = false, branch = "moonbeam-axia-v0.9.17" }
pallet-xcm = { git = "https://github.com/purestake/axia", default-features = false, branch = "moonbeam-axia-v0.9.17" }

# Try-runtime stuff
frame-try-runtime = { git = "https://github.com/purestake/substrate", default-features = false, optional = true , branch = "moonbeam-axia-v0.9.17" }

[dev-dependencies]
hex-literal = "0.3.4"

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }

[features]
default = [ "std" ]
runtime-benchmarks = [
	"cumulus-pallet-session-benchmarking/runtime-benchmarks",
	"hex-literal",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-system-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"pallet-uniques/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"pallet-collator-selection/runtime-benchmarks",
]
try-runtime = [
	"frame-try-runtime",
	"frame-executive/try-runtime",
]
std = [
	"codec/std",
	"scale-info/std",
	"serde",
	"log/std",
	"sp-api/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-version/std",
	"sp-offchain/std",
	"sp-session/std",
	"sp-block-builder/std",
	"sp-transaction-pool/std",
	"sp-inherents/std",
	"frame-support/std",
	"frame-executive/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"pallet-assets/std",
	"pallet-authorship/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-multisig/std",
	"pallet-proxy/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-uniques/std",
	"pallet-utility/std",
	"pallet-xcm/std",
	"allychain-info/std",
	"cumulus-pallet-aura-ext/std",
	"pallet-asset-tx-payment/std",
	"pallet-collator-selection/std",
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-allychain-system/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-pallet-xcm/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"cumulus-ping/std",
	"xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"sp-consensus-aura/std",
	"allychains-common/std",
	"axia-allychain/std",
	"axia-runtime-common/std",
	"axia-core-primitives/std",
	"axia-runtime-constants/std",
]
