[package]
name = "cumulus-client-cli"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
clap = { version = "3.1", features = ["derive"] }

# Substrate dependencies
sc-cli = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-service = { git = "https://github.com/axtend/axlib", branch = "axlib" }
